added bit more structure to common